src/test/deca/context/invalid/renduInitial/08implicitFloat2Int.deca
{
        float x = 3.14;
        int y = x;
        println(y);
}
